# Dofus-Helper

./: .gitignore  DofusHelper_main.py  README.md  build.ps1
bdd_items/: dofus_retro_familiers.json  dofus_retro_items.json  dofus_unity_items.json
dofus-helper/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
dofus-helper/backend/: package.json  tsconfig.json
dofus-helper/backend/data/: autofocus.json  characters.json  shortcuts.json
dofus-helper/backend/src/: node-shim.d.ts  server.ts
dofus-helper/native/notifications-helper/: NotificationsHelper.csproj  Program.cs
dofus-helper/scripts/: backend-dev.mjs  build-notifications-helper.mjs  dev.mjs  prepare-notifications-helper.mjs  prepare-sidecar.mjs
dofus-helper/src/: App.vue  main.ts  styles.css
dofus-helper/src-tauri/: Cargo.toml  tauri.conf.json
dofus-helper/src-tauri/capabilities/: default.json
dofus-helper/src-tauri/icons/: icon.icns
dofus-helper/src-tauri/resources/: placeholder.txt
dofus-helper/src-tauri/resources/notifications-helper/: NotificationReader.deps.json
dofus-helper/src-tauri/src/: lib.rs  main.rs
dofus-helper/src/components/: CraftCard.vue  LinkGroupCard.vue  StatusBadge.vue
dofus-helper/src/services/: backendClient.ts  shortcutCapture.ts  sidecar.ts
dofus-helper/src/views/: CharactersWorkspaceView.vue  CraftsWorkspaceView.vue  LinksWorkspaceView.vue  RetroFamiliarsWorkspaceView.vue  SettingsWorkspaceView.vue  (+1 more)
python.old/: DofusHelper.iss  README.md  build.ps1  requirements.txt
src/domain/: constants.py  craft_catalog.py  models.py
(+78 files in other folders)
